net/mlx5: E-Switch, Fix peer miss rules to use peer eswitch (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8833,6 +8833,7 @@
 	patches.kernel.org/6.12.41-022-ASoC-mediatek-mt8365-dai-i2s-pass-correct-siz.patch
 	patches.kernel.org/6.12.41-023-net-ti-icssg-prueth-Fix-buffer-allocation-for.patch
 	patches.kernel.org/6.12.41-024-net-mlx5-Fix-memory-leak-in-cmd_exec.patch
+	patches.kernel.org/6.12.41-025-net-mlx5-E-Switch-Fix-peer-miss-rules-to-use-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
