erofs: refine z_erofs_get_extent_compressedlen() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8888,6 +8888,7 @@
 	patches.kernel.org/6.12.41-077-mtd-rawnand-qcom-Fix-last-codeword-read-in-qc.patch
 	patches.kernel.org/6.12.41-078-arm64-dts-qcom-x1e78100-t14s-mark-l12b-and-l1.patch
 	patches.kernel.org/6.12.41-079-erofs-simplify-z_erofs_load_compact_lcluster.patch
+	patches.kernel.org/6.12.41-080-erofs-refine-z_erofs_get_extent_compressedlen.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
