platform/x86: ideapad-laptop: Fix FnLock not remembered among boots (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8847,6 +8847,7 @@
 	patches.kernel.org/6.12.41-036-net-hns3-disable-interrupt-when-ptp-init-fail.patch
 	patches.kernel.org/6.12.41-037-net-hns3-fixed-vf-get-max-channels-bug.patch
 	patches.kernel.org/6.12.41-038-net-hns3-default-enable-tx-bounce-buffer-when.patch
+	patches.kernel.org/6.12.41-039-platform-x86-ideapad-laptop-Fix-FnLock-not-re.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
