--- a/series.conf
+++ b/series.conf
@@ -8840,6 +8840,7 @@
 	patches.kernel.org/6.12.41-029-net-sched-sch_qfq-Avoid-triggering-might_slee.patch
 	patches.kernel.org/6.12.41-030-can-netlink-can_changelink-fix-NULL-pointer-d.patch
 	patches.kernel.org/6.12.41-031-drm-bridge-ti-sn65dsi86-Remove-extra-semicolo.patch
+	patches.kernel.org/6.12.41-032-ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
