--- a/series.conf
+++ b/series.conf
@@ -8891,6 +8891,7 @@
 	patches.kernel.org/6.12.41-080-erofs-refine-z_erofs_get_extent_compressedlen.patch
 	patches.kernel.org/6.12.41-081-erofs-use-Z_EROFS_LCLUSTER_TYPE_MAX-to-simpli.patch
 	patches.kernel.org/6.12.41-082-erofs-simplify-tail-inline-pcluster-handling.patch
+	patches.kernel.org/6.12.41-083-erofs-clean-up-header-parsing-for-ztailpackin.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
