--- a/series.conf
+++ b/series.conf
@@ -8868,6 +8868,7 @@
 	patches.kernel.org/6.12.41-057-e1000e-ignore-uninitialized-checksum-word-on-.patch
 	patches.kernel.org/6.12.41-058-gve-Fix-stuck-TX-queue-for-DQ-queue-format.patch
 	patches.kernel.org/6.12.41-059-ice-Fix-a-null-pointer-dereference-in-ice_cop.patch
+	patches.kernel.org/6.12.41-060-kasan-use-vmalloc_dump_obj-for-vmalloc-error-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
