--- a/series.conf
+++ b/series.conf
@@ -8909,6 +8909,7 @@
 	patches.kernel.org/6.12.41-098-KVM-x86-Add-X86EMUL_F_MSR-and-X86EMUL_F_DT_LO.patch
 	patches.kernel.org/6.12.41-099-KVM-x86-model-canonical-checks-more-precisely.patch
 	patches.kernel.org/6.12.41-100-KVM-x86-hyper-v-Skip-non-canonical-addresses-.patch
+	patches.kernel.org/6.12.41-101-x86-hyperv-Fix-APIC-ID-and-VP-index-confusion.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
