--- a/series.conf
+++ b/series.conf
@@ -8864,6 +8864,7 @@
 	patches.kernel.org/6.12.41-053-arm64-entry-Mask-DAIF-in-cpu_switch_to-call_o.patch
 	patches.kernel.org/6.12.41-054-dpaa2-eth-Fix-device-reference-count-leak-in-.patch
 	patches.kernel.org/6.12.41-055-dpaa2-switch-Fix-device-reference-count-leak-.patch
+	patches.kernel.org/6.12.41-056-e1000e-disregard-NVM-checksum-on-tgp-when-val.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
