Input: gpio-keys - fix a sleep while atomic with PREEMPT_RT (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8810,6 +8810,7 @@
 	patches.kernel.org/6.12.40-159-KVM-x86-xen-Fix-cleanup-logic-in-emulation-of.patch
 	patches.kernel.org/6.12.40-160-Linux-6.12.40.patch
 	patches.kernel.org/6.12.41-001-x86-traps-Initialize-DR7-by-writing-its-archi.patch
+	patches.kernel.org/6.12.41-002-Input-gpio-keys-fix-a-sleep-while-atomic-with.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
