s390/ism: fix concurrency management in ism_cmd() (bsc#1234429).

--- a/series.conf
+++ b/series.conf
@@ -8842,6 +8842,7 @@
 	patches.kernel.org/6.12.41-031-drm-bridge-ti-sn65dsi86-Remove-extra-semicolo.patch
 	patches.kernel.org/6.12.41-032-ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN.patch
 	patches.kernel.org/6.12.41-033-selftests-drv-net-wait-for-iperf-client-to-st.patch
+	patches.kernel.org/6.12.41-034-s390-ism-fix-concurrency-management-in-ism_cm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
