spi: cs42l43: Property entry should be a null-terminated array (bsc#1246979).

--- a/series.conf
+++ b/series.conf
@@ -89,6 +89,7 @@
 	# to area specific sections below.
 	########################################################
 	patches.suse/firmware-qemu_fw_cfg-Do-not-hard-depend-on-CONFIG_HA.patch
+	patches.suse/spi-cs42l43-Property-entry-should-be-a-null-terminat.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
