spi: cs42l43: Property entry should be a null-terminated array (bsc#1246979).

--- a/series.conf
+++ b/series.conf
@@ -10589,6 +10589,7 @@
 	patches.suse/kdump-wait-for-dma-to-time-out-when-using-cma.patch
 +hare	patches.suse/net-dcb-check-for-detached-device-before-executing-c.patch
 	patches.suse/s390-boot-Use-D__DISABLE_EXPORTS.patch
+	patches.suse/spi-cs42l43-Property-entry-should-be-a-null-terminat.patch
 
 	########################################################
 	# kbuild/module infrastructure fixes
