--- a/series.conf
+++ b/series.conf
@@ -10441,6 +10441,7 @@
 	patches.suse/wifi-iwlwifi-Fix-memory-leak-in-iwl_mvm_init.patch
 	patches.suse/iwlwifi-Add-missing-check-for-alloc_ordered_workqueu.patch
 	patches.suse/wifi-iwlwifi-Fix-error-code-in-iwl_op_mode_dvm_start.patch
+	patches.suse/net-sched-Restrict-conditions-for-adding-duplicating.patch
 	patches.suse/RDMA-mlx5-Fix-UMR-modifying-of-mkey-page-size.patch
 	patches.suse/mwl8k-Add-missing-check-after-DMA-map.patch
 	patches.suse/wifi-rtl8xxxu-Fix-RX-skb-size-for-aggregation-disabl.patch
