ipv6: annotate data-races around rt->fib6_nsiblings (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10474,6 +10474,7 @@
 	patches.suse/can-peak_usb-fix-USB-FD-devices-potential-malfunctio.patch
 	patches.suse/ipv6-prevent-infinite-loop-in-rt6_nlmsg_size.patch
 	patches.suse/ipv6-fix-possible-infinite-loop-in-fib6_info_uses_de.patch
+	patches.suse/ipv6-annotate-data-races-around-rt-fib6_nsiblings.patch
 	patches.suse/iommu-amd-Fix-geometry.aperture_end-for-V2-tables.patch
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6115-MDSS-compatible.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
