--- a/series.conf
+++ b/series.conf
@@ -33135,6 +33135,7 @@
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/sched-freezer-Remove-unnecessary-warning-in-__thaw_task.patch
+	patches.suse/Revert-cgroup_freezer-cgroup_freezing-Check-if-not-frozen.patch
 	patches.suse/Input-xpad-set-correct-controller-type-for-Acer-NGR2.patch
 	patches.suse/regmap-fix-potential-memory-leak-of-regmap_bus.patch
 	patches.suse/iio-adc-stm32-adc-Fix-race-in-installing-chained-IRQ.patch
