--- a/blacklist.conf
+++ b/blacklist.conf
@@ -881,3 +881,4 @@ f914b52c379c12288b7623bb814d0508dbe7481d # CVE-2025-38346 https://bugzilla.suse.
 eb85c2410d6f581e957cd03a644ff6ddbe592af9 # CVE-2025-23132 https://bugzilla.suse.com/show_bug.cgi?id=1241608#c1
 547e836661554dcfa15c212a3821664e85b4191a # CVE-2025-38260 https://bugzilla.suse.com/show_bug.cgi?id=1246223#c1
 6c038b58a2dc5a008c7e7a1297f5aaa4deaaaa7e # CVE-2025-38438 https://bugzilla.suse.com/show_bug.cgi?id=1247157#c2
+646faf36d7271c597497ca547a59912fcab49be9 # not relevant in our config (not disabled v1 controllers)
