--- a/series.conf
+++ b/series.conf
@@ -32994,6 +32994,7 @@
 	patches.suse/perf-Fix-sample-vs-do_exit.patch
 	patches.suse/maple_tree-fix-MA_STATE_PREALLOC-flag-in-mas_preallocate.patch
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
+	patches.suse/btrfs-update-superblock-s-device-bytes_used-when-dro.patch
 	patches.suse/btrfs-fix-assertion-when-building-free-space-tree.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
