--- a/series.conf
+++ b/series.conf
@@ -10554,6 +10554,7 @@
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
+	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 
 	# tip/tip
 	patches.suse/sched-eevdf-Correct-the-comment-in-place_entity.patch
