--- a/series.conf
+++ b/series.conf
@@ -6512,6 +6512,7 @@
 	patches.suse/scsi-qla2xxx-Mark-device-strings-as-nonstring.patch
 	patches.suse/pstore-Change-kmsg_bytes-storage-size-to-u32.patch
 	patches.suse/cgroup-rstat-Fix-forceidle-time-in-cpu.stat.patch
+	patches.suse/cgroup-Print-message-when-proc-cgroups-is-read-on-v2-only-.patch
 	patches.suse/bitmap-Align-documentation-between-bitmap_gather-and.patch
 	patches.suse/Flush-console-log-from-kernel_power_off.patch
 	patches.suse/x86-locking-Use-ALT_OUTPUT_SP-for-percpu_-try_-cmpxchg-64-.patch
