blacklist.conf: Add 378bdb97405a memcg: convert memcg->socket_pressure to u64

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -473,3 +473,4 @@ f44fa354a0715577ca32b085f6f60bcf32c748dd # CVE-2025-22011 https://bugzilla.suse.
 aa7b65c2a29e8b07057b13624102c6810597c0d5 # rust
 ed62a62a18bc144f73eadf866ae46842e8f6606e # irrelevant, only help texts
 d1fbe1ebf4a12cabd7945335d5e47718cb2bef99 # irrelevant in our config, our kernels are already configured
+378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
