blacklist.conf: Add 378bdb97405a memcg: convert memcg->socket_pressure to u64

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1057,3 +1057,4 @@ fd86344823b521149bb31d91eba900ba3525efa6 # fixup of blacklisted dcf70df2048d27c5
 ed99822817cb728eee8786c1c921c69c6be206fe # lockdep infrastructure
 1ca27e0c8c13ac50a4acf9cdf77069e2d94a547d # lockdep infrastructure
 8647ece4814f3bfdb5f7a8e19f882c9b89299a07 # mainly lockdep infrastructure
+378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
