blacklist.conf: Add fdc5001b002e mm/vmstat: make MEMCG select VM_EVENT_COUNTERS

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1058,3 +1058,4 @@ ed99822817cb728eee8786c1c921c69c6be206fe # lockdep infrastructure
 1ca27e0c8c13ac50a4acf9cdf77069e2d94a547d # lockdep infrastructure
 8647ece4814f3bfdb5f7a8e19f882c9b89299a07 # mainly lockdep infrastructure
 378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
+fdc5001b002eaca9989b5f3563245662fd1e4d40 # irrelevant in our config CONFIG_VM_EVENT_COUNTERS=y
