--- a/blacklist.conf
+++ b/blacklist.conf
@@ -474,3 +474,4 @@ aa7b65c2a29e8b07057b13624102c6810597c0d5 # rust
 ed62a62a18bc144f73eadf866ae46842e8f6606e # irrelevant, only help texts
 d1fbe1ebf4a12cabd7945335d5e47718cb2bef99 # irrelevant in our config, our kernels are already configured
 378bdb97405a00bf03d8d993435c83add1688e36 # only (nonserious) bug on 32b, KABI breakage there
+fdc5001b002eaca9989b5f3563245662fd1e4d40 # irrelevant in our config CONFIG_VM_EVENT_COUNTERS=y
