btrfs: use NOFS context when getting inodes during logging and log replay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26085,6 +26085,7 @@
 	patches.suse/tracing-net_sched-NULL-pointer-dereference-in-perf_trace_qdisc_reset.patch
 	patches.suse/msft-hv-3022-net-mana-Fix-possible-double-free-in-error-handling-.patch
 	patches.suse/netfilter-nf_tables-fully-validate-NFT_DATA_VALUE-on.patch
+	patches.suse/btrfs-use-NOFS-context-when-getting-inodes-during-lo.patch
 	patches.suse/btrfs-qgroup-fix-quota-root-leak-after-quota-disable.patch
 	patches.suse/syscalls-fix-compat_sys_io_pgetevents_time64-usage.patch
 	patches.suse/s390-pci-Add-missing-virt_to_phys-for-directed-DIBV.patch
