btrfs: fix invalid inode pointer dereferences during log replay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -32998,6 +32998,7 @@
 	patches.suse/maple_tree-fix-MA_STATE_PREALLOC-flag-in-mas_preallocate.patch
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
 	patches.suse/btrfs-update-superblock-s-device-bytes_used-when-dro.patch
+	patches.suse/btrfs-fix-invalid-inode-pointer-dereferences-during-.patch
 	patches.suse/btrfs-fix-assertion-when-building-free-space-tree.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
