PCI: rockchip-host: Fix "Unexpected Completion" log message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33387,6 +33387,7 @@
 	patches.suse/PCI-endpoint-Fix-configfs-group-removal-on-driver-te.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
+	patches.suse/PCI-rockchip-host-Fix-Unexpected-Completion-log-mess.patch
 
 	########################################################
 	# end of sorted patches
