--- a/series.conf
+++ b/series.conf
@@ -32848,6 +32848,7 @@
 	patches.suse/serial-Fix-potential-null-ptr-deref-in-mlb_usio_prob.patch
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
+	patches.suse/usb-typec-tcpm-allow-to-use-sink-in-accessory-mode.patch
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
 	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
 	patches.suse/usb-Add-checks-for-snprintf-calls-in-usb_alloc_dev.patch
