dmaengine: mv_xor: Fix missing check after DMA map and missing unmap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33380,6 +33380,7 @@
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
+	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 
 	########################################################
 	# end of sorted patches
