PCI: endpoint: Fix configfs group removal on driver teardown (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33384,6 +33384,7 @@
 	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
 	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
 	patches.suse/PCI-endpoint-Fix-configfs-group-list-head-handling.patch
+	patches.suse/PCI-endpoint-Fix-configfs-group-removal-on-driver-te.patch
 
 	########################################################
 	# end of sorted patches
