--- a/series.conf
+++ b/series.conf
@@ -13728,6 +13728,7 @@
 	patches.suse/can-dev-can_restart-don-t-crash-kernel-if-carrier-is.patch
 	patches.suse/can-dev-can_restart-fix-race-condition-between-contr.patch
 	patches.suse/can-dev-can_restart-reverse-logic-to-remove-need-for.patch
+	patches.suse/can-dev-can_restart-move-debug-message-and-stats-aft.patch
 	patches.suse/can-dev-can_put_echo_skb-don-t-crash-kernel-if-can_p.patch
 	patches.suse/i40e-Remove-back-pointer-from-i40e_hw-structure.patch
 	patches.suse/i40e-Move-I40E_MASK-macro-to-i40e_register.h.patch
