ALSA: hda/realtek - Add mute LED support for HP Pavilion 15-eg0xxx (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33196,6 +33196,7 @@
 	patches.suse/drm-bridge-ti-sn65dsi86-Remove-extra-semicolon-in-ti.patch
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
+	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Pavilio.patch
 	patches.suse/nilfs2-reject-invalid-file-types-when-reading-inodes.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
