--- a/series.conf
+++ b/series.conf
@@ -33386,6 +33386,7 @@
 	patches.suse/PCI-endpoint-Fix-configfs-group-list-head-handling.patch
 	patches.suse/PCI-endpoint-Fix-configfs-group-removal-on-driver-te.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
+	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
 
 	########################################################
 	# end of sorted patches
