power: supply: cpcap-charger: Fix null check for power_supply_get_by_name (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33374,6 +33374,7 @@
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
+	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 
 	########################################################
 	# end of sorted patches
