--- a/series.conf
+++ b/series.conf
@@ -32849,6 +32849,7 @@
 	patches.suse/vt-remove-VT_RESIZE-and-VT_RESIZEX-from-vt_compat_io.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-typec-tcpm-allow-to-use-sink-in-accessory-mode.patch
+	patches.suse/usb-typec-tcpm-allow-switching-to-mode-accessory-to-.patch
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
 	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
 	patches.suse/usb-Add-checks-for-snprintf-calls-in-usb_alloc_dev.patch
