ALSA: hda: Add missing NVIDIA HDA codec IDs (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33106,6 +33106,7 @@
 	patches.suse/x86-bugs-Add-a-Transient-Scheduler-Attacks-mitigation.patch
 	patches.suse/KVM-SVM-Advertise-TSA-CPUID-bits-to-guests.patch
 	patches.suse/x86-process-Move-the-buffer-clearing-before-MONITOR.patch
+	patches.suse/ALSA-hda-Add-missing-NVIDIA-HDA-codec-IDs.patch
 	patches.suse/ASoC-fsl_asrc-use-internal-measured-ratio-for-non-id.patch
 	patches.suse/ASoC-cs35l56-probe-should-fail-if-the-device-ID-is-n.patch
 	patches.suse/pwm-mediatek-Ensure-to-disable-clocks-in-error-path.patch
