PCI: endpoint: Fix configfs group list head handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33383,6 +33383,7 @@
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
 	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
+	patches.suse/PCI-endpoint-Fix-configfs-group-list-head-handling.patch
 
 	########################################################
 	# end of sorted patches
