ASoC: fsl_xcvr: get channel status data when PHY is not exists (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33377,6 +33377,7 @@
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
+	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 
 	########################################################
 	# end of sorted patches
