--- a/series.conf
+++ b/series.conf
@@ -33385,6 +33385,7 @@
 	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
 	patches.suse/PCI-endpoint-Fix-configfs-group-list-head-handling.patch
 	patches.suse/PCI-endpoint-Fix-configfs-group-removal-on-driver-te.patch
+	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
 
 	########################################################
 	# end of sorted patches
