dmaengine: nbpfaxi: Add missing check after DMA map (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33381,6 +33381,7 @@
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
+	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
 
 	########################################################
 	# end of sorted patches
