soundwire: stream: restore params when prepare ports fail (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33376,6 +33376,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
+	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 
 	########################################################
 	# end of sorted patches
