dmaengine: qcom: gpi: Drop unused gpi_write_reg_field() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33379,6 +33379,7 @@
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
+	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 
 	########################################################
 	# end of sorted patches
