dmaengine: dw-edma: Drop unused dchan2dev() and chan2dev() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33378,6 +33378,7 @@
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
+	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 
 	########################################################
 	# end of sorted patches
