--- a/series.conf
+++ b/series.conf
@@ -32506,6 +32506,7 @@
 	patches.suse/Documentation-rtla-Fix-typo-in-rtla-timerlat.rst.patch
 	patches.suse/Documentation-rtla-Fix-typo-in-common_timerlat_descr.patch
 	patches.suse/ALSA-usb-audio-Add-Pioneer-DJ-DJM-V10-support.patch
+	patches.suse/ALSA-hda-tegra-Add-Tegra264-support.patch
 	patches.suse/ALSA-usb-audio-Rename-Pioneer-mixer-channel-controls.patch
 	patches.suse/ALSA-usb-audio-Kill-timer-properly-at-removal.patch
 	patches.suse/ASoC-codec-wcd9335-Convert-to-GPIO-descriptors.patch
