--- a/series.conf
+++ b/series.conf
@@ -33382,6 +33382,7 @@
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
+	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
 
 	########################################################
 	# end of sorted patches
