drm/amdgpu: Initialize data to NULL in imu_v12_0_program_rlc_ram() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54409,6 +54409,7 @@
 	patches.suse/mtd-rawnand-fsmc-Add-missing-check-after-DMA-map.patch
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
+	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
