--- a/series.conf
+++ b/series.conf
@@ -54187,6 +54187,7 @@
 	patches.suse/comedi-das6402-Fix-bit-shift-out-of-bounds.patch
 	patches.suse/comedi-Fix-use-of-uninitialized-data-in-insn_rw_emul.patch
 	patches.suse/comedi-Fix-initialization-of-data-for-instructions-t.patch
+	patches.suse/staging-vchiq_arm-Make-vchiq_shutdown-never-fail.patch
 	patches.suse/pch_uart-Fix-dma_sync_sg_for_device-nents-value.patch
 	patches.suse/thunderbolt-Fix-wake-on-connect-at-runtime.patch
 	patches.suse/thunderbolt-Fix-bit-masking-in-tb_dp_port_set_hops.patch
