regulator: core: fix NULL dereference on unbind due to stale coupling data (stable-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54080,6 +54080,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-kobject-cleanup.patch
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
+	patches.suse/regulator-core-fix-NULL-dereference-on-unbind-due-to.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/Revert-ACPI-battery-negate-current-when-discharging.patch
 	patches.suse/powercap-intel_rapl-Do-not-change-CLAMPING-bit-if-EN.patch
