--- a/series.conf
+++ b/series.conf
@@ -54411,6 +54411,7 @@
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
 	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
+	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
 
 	# netdev/net-next main
 	patches.suse/dt-bindings-dpll-Add-DPLL-device-and-pin.patch
