drm/amd/display: fix initial backlight brightness calculation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54410,6 +54410,7 @@
 	patches.suse/mtd-spinand-propagate-spinand_wait-errors-from-spina.patch
 	patches.suse/mtd-rawnand-atmel-set-pmecc-data-setup-time.patch
 	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
+	patches.suse/drm-amd-display-fix-initial-backlight-brightness-cal.patch
 	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
 	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
 
