--- a/series.conf
+++ b/series.conf
@@ -10700,6 +10700,7 @@
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 	patches.suse/selftests-ALSA-fix-memory-leak-in-utimer-test.patch
 	patches.suse/phy-qualcomm-phy-qcom-eusb2-repeater-Don-t-zero-out-.patch
+	patches.suse/phy-qcom-phy-qcom-m31-Update-IPQ5332-M31-USB-phy-ini.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
