--- a/series.conf
+++ b/series.conf
@@ -10706,6 +10706,7 @@
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 	patches.suse/dmaengine-mmp-Fix-again-Wvoid-pointer-to-enum-cast-w.patch
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
+	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
