--- a/series.conf
+++ b/series.conf
@@ -10397,6 +10397,7 @@
 	patches.suse/bus-fsl-mc-Fix-potential-double-device-reference-in-.patch
 	patches.suse/can-netlink-can_changelink-fix-NULL-pointer-deref-of.patch
 	patches.suse/s390-ism-fix-concurrency-management-in-ism_cmd.patch
+	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Victus--21c8ed9.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 	patches.suse/ASoC-mediatek-mt8365-dai-i2s-pass-correct-size-to-mt.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
