--- a/series.conf
+++ b/series.conf
@@ -10174,6 +10174,7 @@
 	patches.suse/xhci-dbctty-disable-ECHO-flag-by-default.patch
 	patches.suse/xhci-dbc-Flush-queued-requests-before-stopping-dbc.patch
 	patches.suse/platform-mellanox-mlxbf-tmfifo-fix-vring_desc.len-as.patch
+	patches.suse/platform-x86-asus-nb-wmi-add-DMI-quirk-for-ASUS-Zenb.patch
 	patches.suse/platform-mellanox-mlxbf-pmc-Fix-duplicate-event-ID-f.patch
 	patches.suse/platform-mellanox-nvsw-sn2201-Fix-bus-number-in-adap.patch
 	patches.suse/platform-x86-dell-wmi-sysman-Fix-WMI-data-block-retr.patch
