--- a/series.conf
+++ b/series.conf
@@ -10697,6 +10697,7 @@
 	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
+	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
