dmaengine: qcom: gpi: Drop unused gpi_write_reg_field() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10703,6 +10703,7 @@
 	patches.suse/phy-qcom-phy-qcom-m31-Update-IPQ5332-M31-USB-phy-ini.patch
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Drop-unused-mc_enc.patch
+	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
