dmaengine: dw-edma: Drop unused dchan2dev() and chan2dev() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10701,6 +10701,7 @@
 	patches.suse/selftests-ALSA-fix-memory-leak-in-utimer-test.patch
 	patches.suse/phy-qualcomm-phy-qcom-eusb2-repeater-Don-t-zero-out-.patch
 	patches.suse/phy-qcom-phy-qcom-m31-Update-IPQ5332-M31-USB-phy-ini.patch
+	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
