PCI: rockchip-host: Fix "Unexpected Completion" log message (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10715,6 +10715,7 @@
 	patches.suse/PCI-imx6-Add-IMX8MM_EP-and-IMX8MP_EP-fixed-256-byte-.patch
 	patches.suse/PCI-imx6-Remove-apps_reset-toggling-from-imx_pcie_-a.patch
 	patches.suse/PCI-imx6-Delay-link-start-until-configfs-start-writt.patch
+	patches.suse/PCI-rockchip-host-Fix-Unexpected-Completion-log-mess.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
