watchdog: ziirave_wdt: check record length in ziirave_firm_verify() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10707,6 +10707,7 @@
 	patches.suse/dmaengine-mmp-Fix-again-Wvoid-pointer-to-enum-cast-w.patch
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
+	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
