phy: qualcomm: phy-qcom-eusb2-repeater: Don't zero-out registers (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10699,6 +10699,7 @@
 	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
 	patches.suse/ASoC-fsl_xcvr-get-channel-status-data-when-PHY-is-no.patch
 	patches.suse/selftests-ALSA-fix-memory-leak-in-utimer-test.patch
+	patches.suse/phy-qualcomm-phy-qcom-eusb2-repeater-Don-t-zero-out-.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
