drm/amdgpu: Initialize data to NULL in imu_v12_0_program_rlc_ram() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10692,6 +10692,7 @@
 	patches.suse/HID-apple-validate-feature-report-field-count-to-pre.patch
 	patches.suse/power-supply-cpcap-charger-Fix-null-check-for-power_.patch
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
+	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
