--- a/series.conf
+++ b/series.conf
@@ -10401,6 +10401,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-support-for-HP-Pavilio.patch
 	patches.suse/ALSA-hda-realtek-Fix-mute-LED-mask-on-HP-OMEN-16-lap.patch
 	patches.suse/ASoC-mediatek-mt8365-dai-i2s-pass-correct-size-to-mt.patch
+	patches.suse/kasan-use-vmalloc_dump_obj-for-vmalloc-error-reports.patch
 	patches.suse/resource-fix-false-warning-in-__request_region.patch
 	patches.suse/sprintf.h-requires-stdarg.h.patch
 	patches.suse/drm-i915-display-Fix-dma_fence_wait_timeout-return-v.patch
