--- a/series.conf
+++ b/series.conf
@@ -10187,6 +10187,7 @@
 	patches.suse/platform-x86-think-lmi-Fix-sysfs-group-cleanup.patch
 	patches.suse/spi-spi-fsl-dspi-Clear-completion-counter-before-ini.patch
 	patches.suse/spi-cadence-quadspi-fix-cleanup-of-rx_chan-on-failur.patch
+	patches.suse/regulator-core-fix-NULL-dereference-on-unbind-due-to.patch
 	patches.suse/regulator-gpio-Fix-the-out-of-bounds-access-to-drvda.patch
 	patches.suse/firmware-arm_ffa-Fix-memory-leak-by-freeing-notifier.patch
 	patches.suse/optee-ffa-fix-sleep-in-atomic-context.patch
