--- a/series.conf
+++ b/series.conf
@@ -10694,6 +10694,7 @@
 	patches.suse/power-supply-max14577-Handle-NULL-pdata-when-CONFIG_.patch
 	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
 	patches.suse/drm-amd-display-fix-initial-backlight-brightness-cal.patch
+	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
