soundwire: stream: restore params when prepare ports fail (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10695,6 +10695,7 @@
 	patches.suse/drm-amdgpu-Initialize-data-to-NULL-in-imu_v12_0_prog.patch
 	patches.suse/drm-amd-display-fix-initial-backlight-brightness-cal.patch
 	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
+	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
