dmaengine: mv_xor: Fix missing check after DMA map and missing unmap (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10705,6 +10705,7 @@
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Drop-unused-mc_enc.patch
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
 	patches.suse/dmaengine-mmp-Fix-again-Wvoid-pointer-to-enum-cast-w.patch
+	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
