PCI: imx6: Remove apps_reset toggling from imx_pcie_{assert/deassert}_core_reset (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10713,6 +10713,7 @@
 	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
 	patches.suse/PCI-imx6-Add-IMX8MM_EP-and-IMX8MP_EP-fixed-256-byte-.patch
+	patches.suse/PCI-imx6-Remove-apps_reset-toggling-from-imx_pcie_-a.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
