--- a/series.conf
+++ b/series.conf
@@ -10712,6 +10712,7 @@
 	patches.suse/PCI-endpoint-Fix-configfs-group-removal-on-driver-te.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
+	patches.suse/PCI-imx6-Add-IMX8MM_EP-and-IMX8MP_EP-fixed-256-byte-.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
