usb: typec: tcpm: apply vbus before data bringup in tcpm_src_attach (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10164,6 +10164,7 @@
 	patches.suse/usb-gadget-u_serial-Fix-race-condition-in-TTY-wakeup.patch
 	patches.suse/usb-xhci-Skip-xhci_reset-in-xhci_resume-if-xhci-is-b.patch
 	patches.suse/Revert-usb-xhci-Implement-xhci_handshake_check_state.patch
+	patches.suse/usb-typec-tcpm-apply-vbus-before-data-bringup-in-tcp.patch
 	patches.suse/usb-cdnsp-Fix-issue-with-CV-Bad-Descriptor-test.patch
 	patches.suse/usb-typec-altmodes-displayport-do-not-index-invalid-.patch
 	patches.suse/usb-typec-displayport-Fix-potential-deadlock.patch
