PCI: endpoint: Fix configfs group list head handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10708,6 +10708,7 @@
 	patches.suse/dmaengine-mv_xor-Fix-missing-check-after-DMA-map-and.patch
 	patches.suse/dmaengine-nbpfaxi-Add-missing-check-after-DMA-map.patch
 	patches.suse/watchdog-ziirave_wdt-check-record-length-in-ziirave_.patch
+	patches.suse/PCI-endpoint-Fix-configfs-group-list-head-handling.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
