--- a/series.conf
+++ b/series.conf
@@ -10696,6 +10696,7 @@
 	patches.suse/drm-amd-display-fix-initial-backlight-brightness-cal.patch
 	patches.suse/drm-xe-vf-Disable-CSC-support-on-VF.patch
 	patches.suse/soundwire-stream-restore-params-when-prepare-ports-f.patch
+	patches.suse/ALSA-scarlett2-Add-retry-on-EPROTO-from-scarlett2_us.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
