--- a/series.conf
+++ b/series.conf
@@ -9804,6 +9804,7 @@
 	patches.suse/tty-serial-8250_omap-fix-TX-with-DMA-for-am33xx.patch
 	patches.suse/usb-typec-mux-do-not-return-on-EOPNOTSUPP-in-mux-swi.patch
 	patches.suse/usb-typec-tcpm-allow-to-use-sink-in-accessory-mode.patch
+	patches.suse/usb-typec-tcpm-allow-switching-to-mode-accessory-to-.patch
 	patches.suse/usb-typec-displayport-Receive-DP-Status-Update-NAK-r.patch
 	patches.suse/usb-gadget-f_hid-wake-up-readers-on-disable-unbind.patch
 	patches.suse/usb-cdc-wdm-avoid-setting-WDM_READ-for-ZLP-s.patch
