--- a/series.conf
+++ b/series.conf
@@ -10704,6 +10704,7 @@
 	patches.suse/dmaengine-dw-edma-Drop-unused-dchan2dev-and-chan2dev.patch
 	patches.suse/dmaengine-fsl-dpaa2-qdma-Drop-unused-mc_enc.patch
 	patches.suse/dmaengine-qcom-gpi-Drop-unused-gpi_write_reg_field.patch
+	patches.suse/dmaengine-mmp-Fix-again-Wvoid-pointer-to-enum-cast-w.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
