--- a/series.conf
+++ b/series.conf
@@ -33388,6 +33388,7 @@
 	patches.suse/PCI-endpoint-pci-epf-vntb-Return-ENOENT-if-pci_epc_g.patch
 	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
 	patches.suse/PCI-rockchip-host-Fix-Unexpected-Completion-log-mess.patch
+	patches.suse/firewire-ohci-correct-code-comments-about-bus_reset-.patch
 
 	########################################################
 	# end of sorted patches
