fbdev: imxfb: Check fb_add_videomode to prevent null-ptr-deref (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33389,6 +33389,7 @@
 	patches.suse/PCI-endpoint-pci-epf-vntb-Fix-the-incorrect-usage-of.patch
 	patches.suse/PCI-rockchip-host-Fix-Unexpected-Completion-log-mess.patch
 	patches.suse/firewire-ohci-correct-code-comments-about-bus_reset-.patch
+	patches.suse/fbdev-imxfb-Check-fb_add_videomode-to-prevent-null-p.patch
 
 	########################################################
 	# end of sorted patches
