--- a/series.conf
+++ b/series.conf
@@ -33391,6 +33391,7 @@
 	patches.suse/firewire-ohci-correct-code-comments-about-bus_reset-.patch
 	patches.suse/fbdev-imxfb-Check-fb_add_videomode-to-prevent-null-p.patch
 	patches.suse/pinctrl-sunxi-Fix-memory-leak-on-krealloc-failure.patch
+	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
 
 	########################################################
 	# end of sorted patches
