--- a/series.conf
+++ b/series.conf
@@ -10723,6 +10723,7 @@
 	patches.suse/firewire-ohci-correct-code-comments-about-bus_reset-.patch
 	patches.suse/fbdev-imxfb-Check-fb_add_videomode-to-prevent-null-p.patch
 	patches.suse/pinctrl-sunxi-Fix-memory-leak-on-krealloc-failure.patch
+	patches.suse/pinctrl-berlin-fix-memory-leak-in-berlin_pinctrl_bui.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
