fbdev: imxfb: Check fb_add_videomode to prevent null-ptr-deref (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10721,6 +10721,7 @@
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
 	patches.suse/vsock-virtio-Validate-length-in-packet-header-before.patch
 	patches.suse/firewire-ohci-correct-code-comments-about-bus_reset-.patch
+	patches.suse/fbdev-imxfb-Check-fb_add_videomode-to-prevent-null-p.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
