i3c: fix module_i3c_i2c_driver() with I3C=n (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33392,6 +33392,7 @@
 	patches.suse/fbdev-imxfb-Check-fb_add_videomode-to-prevent-null-p.patch
 	patches.suse/pinctrl-sunxi-Fix-memory-leak-on-krealloc-failure.patch
 	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
+	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 
 	########################################################
 	# end of sorted patches
