rtc: hym8563: fix incorrect maximum clock rate handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33395,6 +33395,7 @@
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 	patches.suse/rtc-ds1307-fix-incorrect-maximum-clock-rate-handling.patch
+	patches.suse/rtc-hym8563-fix-incorrect-maximum-clock-rate-handlin.patch
 
 	########################################################
 	# end of sorted patches
