--- a/series.conf
+++ b/series.conf
@@ -33398,6 +33398,7 @@
 	patches.suse/rtc-hym8563-fix-incorrect-maximum-clock-rate-handlin.patch
 	patches.suse/rtc-nct3018y-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf85063-fix-incorrect-maximum-clock-rate-handli.patch
+	patches.suse/rtc-pcf8563-fix-incorrect-maximum-clock-rate-handlin.patch
 
 	########################################################
 	# end of sorted patches
