--- a/series.conf
+++ b/series.conf
@@ -33394,6 +33394,7 @@
 	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
+	patches.suse/rtc-ds1307-fix-incorrect-maximum-clock-rate-handling.patch
 
 	########################################################
 	# end of sorted patches
