--- a/series.conf
+++ b/series.conf
@@ -33396,6 +33396,7 @@
 	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 	patches.suse/rtc-ds1307-fix-incorrect-maximum-clock-rate-handling.patch
 	patches.suse/rtc-hym8563-fix-incorrect-maximum-clock-rate-handlin.patch
+	patches.suse/rtc-nct3018y-fix-incorrect-maximum-clock-rate-handli.patch
 
 	########################################################
 	# end of sorted patches
