ucount: fix atomic_long_inc_below() argument type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33393,6 +33393,7 @@
 	patches.suse/pinctrl-sunxi-Fix-memory-leak-on-krealloc-failure.patch
 	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
+	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 
 	########################################################
 	# end of sorted patches
