rtc: rv3028: fix incorrect maximum clock rate handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33399,6 +33399,7 @@
 	patches.suse/rtc-nct3018y-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf85063-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf8563-fix-incorrect-maximum-clock-rate-handlin.patch
+	patches.suse/rtc-rv3028-fix-incorrect-maximum-clock-rate-handling.patch
 
 	########################################################
 	# end of sorted patches
