rtc: rv3028: fix incorrect maximum clock rate handling (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10734,6 +10734,7 @@
 	patches.suse/rtc-nct3018y-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf85063-fix-incorrect-maximum-clock-rate-handli.patch
 	patches.suse/rtc-pcf8563-fix-incorrect-maximum-clock-rate-handlin.patch
+	patches.suse/rtc-rv3028-fix-incorrect-maximum-clock-rate-handling.patch
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
