ucount: fix atomic_long_inc_below() argument type (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10728,6 +10728,7 @@
 	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
+	patches.suse/ucount-fix-atomic_long_inc_below-argument-type.patch
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
 	patches.suse/btrfs-fix-log-tree-replay-failure-due-to-file-with-0.patch
 	patches.suse/RDMA-siw-Fix-the-sendmsg-byte-count-in-siw_tcp_sendp.patch
