i3c: fix module_i3c_i2c_driver() with I3C=n (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10725,6 +10725,7 @@
 	patches.suse/pinctrl-sunxi-Fix-memory-leak-on-krealloc-failure.patch
 	patches.suse/pinctrl-berlin-fix-memory-leak-in-berlin_pinctrl_bui.patch
 	patches.suse/pinmux-fix-race-causing-mux_owner-NULL-with-active-m.patch
+	patches.suse/i3c-fix-module_i3c_i2c_driver-with-I3C-n.patch
 	patches.suse/module-Remove-unnecessary-1-from-last_unloaded_module-name.patch
 	patches.suse/module-Restore-the-moduleparam-prefix-length-check.patch
 	patches.suse/exfat-fdatasync-flag-should-be-same-like-generic_write_sync.patch
