--- a/series.conf
+++ b/series.conf
@@ -10070,6 +10070,7 @@
 	patches.suse/net-sched-Always-pass-notifications-when-child-class-becom.patch
 	patches.suse/virtio-net-ensure-the-received-length-does-not-excee.patch
 	patches.suse/virtio-net-xsk-rx-fix-the-frame-s-length-check.patch
+	patches.suse/virtio_ring-Fix-error-reporting-in-virtqueue_resize.patch
 	patches.suse/vsock-vmci-Clear-the-vmci-transport-packet-properly-.patch
 	patches.suse/scsi-qla2xxx-Fix-DMA-mapping-test-in-qla24xx_get_port_data.patch
 	patches.suse/scsi-qla4xxx-Fix-missing-DMA-mapping-error-in-qla4xxx_allo.patch
