--- a/series.conf
+++ b/series.conf
@@ -10590,6 +10590,7 @@
 	patches.suse/maple_tree-fix-status-setup-on-restore-to-active.patch
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
+	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
