vhost/vsock: Avoid allocating arbitrarily-sized SKBs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10591,6 +10591,7 @@
 	patches.suse/cgroup-Add-compatibility-option-for-content-of-proc-cgroup.patch
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
+	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
