vsock/virtio: Validate length in packet header before skb_put() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10592,6 +10592,7 @@
 	patches.suse/vhost-scsi-Fix-log-flooding-with-target-does-not-exi.patch
 	patches.suse/vhost-Reintroduce-kthread-API-and-add-mode-selection.patch
 	patches.suse/vhost-vsock-Avoid-allocating-arbitrarily-sized-SKBs.patch
+	patches.suse/vsock-virtio-Validate-length-in-packet-header-before.patch
 
 	# out-of-tree patches
 	patches.suse/powerpc-pseries-dlpar-Search-DRC-index-from-ibm-drc-.patch
