--- a/series.conf
+++ b/series.conf
@@ -10476,6 +10476,7 @@
 	patches.suse/iommu-arm-smmu-qcom-Add-SM6115-MDSS-compatible.patch
 	patches.suse/xen-fix-UAF-in-dmabuf_exp_from_pages.patch
 	patches.suse/xen-gntdev-remove-struct-gntdev_copy_batch-from-stac.patch
+	patches.suse/KVM-x86-Avoid-calling-kvm_is_mmio_pfn-when-kvm_x86_o.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
