--- a/series.conf
+++ b/series.conf
@@ -33014,6 +33014,7 @@
 	patches.suse/rtc-cmos-use-spin_lock_irqsave-in-cmos_interrupt.patch
 	patches.suse/nfs-Clean-up-proc-net-rpc-nfs-when-nfs_fs_proc_net_init-fails.patch
 	patches.suse/NFSv4-pNFS-Fix-a-race-to-wake-on-NFS_LAYOUT_DRAIN.patch
+	patches.suse/RDMA-core-Rate-limit-GID-cache-warning-messages.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
