--- a/series.conf
+++ b/series.conf
@@ -10048,6 +10048,7 @@
 	patches.suse/NFSv4-pNFS-Fix-a-race-to-wake-on-NFS_LAYOUT_DRAIN.patch
 	patches.suse/RDMA-mlx5-reduce-stack-usage-in-mlx5_ib_ufile_hw_cle.patch
 	patches.suse/RDMA-mlx5-Fix-unsafe-xarray-access-in-implicit-ODP-h.patch
+	patches.suse/RDMA-core-Rate-limit-GID-cache-warning-messages.patch
 	patches.suse/RDMA-mlx5-Initialize-obj_event-obj_sub_list-before-x.patch
 	patches.suse/IB-mlx5-Fix-potential-deadlock-in-MR-deregistration.patch
 	patches.suse/RDMA-mlx5-Fix-HW-counters-query-for-non-representor-.patch
