--- a/series.conf
+++ b/series.conf
@@ -33165,6 +33165,7 @@
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/nvme-fix-inconsistent-RCU-list-manipulation-in-nvme_.patch
 	patches.suse/nvme-fix-endianness-of-command-word-prints-in-nvme_l.patch
+	patches.suse/nvme-fix-misaccounting-of-nvme-mpath-inflight-I-O.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/sched-freezer-Remove-unnecessary-warning-in-__thaw_task.patch
 	patches.suse/Revert-cgroup_freezer-cgroup_freezing-Check-if-not-frozen.patch
