--- a/series.conf
+++ b/series.conf
@@ -33163,6 +33163,7 @@
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-ASUS-ROG-Strix-G712LW.patch
 	patches.suse/drm-amdgpu-gfx8-reset-compute-ring-wptr-on-the-GPU-o.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
+	patches.suse/nvme-fix-inconsistent-RCU-list-manipulation-in-nvme_.patch
 	patches.suse/hwmon-corsair-cpro-Validate-the-size-of-the-received.patch
 	patches.suse/sched-freezer-Remove-unnecessary-warning-in-__thaw_task.patch
 	patches.suse/Revert-cgroup_freezer-cgroup_freezing-Check-if-not-frozen.patch
