--- a/series.conf
+++ b/series.conf
@@ -33209,6 +33209,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/btrfs-don-t-ignore-inode-missing-when-replaying-log-.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_attr_remove_iter_return.patch
 	patches.suse/xfs-remove-unused-event-xlog_iclog_want_sync.patch
 	patches.suse/xfs-remove-unused-event-xfs_ioctl_clone.patch
