--- a/series.conf
+++ b/series.conf
@@ -33064,6 +33064,7 @@
 	patches.suse/btrfs-fix-missing-error-handling-when-searching-for-.patch
 	patches.suse/btrfs-fix-iteration-of-extrefs-during-log-replay.patch
 	patches.suse/btrfs-fix-inode-lookup-error-handling-during-log-rep.patch
+	patches.suse/btrfs-propagate-last_unlink_trans-earlier-when-doing.patch
 	patches.suse/fs-export-anon_inode_make_secure_inode-and-fix-secre.patch
 	patches.suse/nvme-Fix-incorrect-cdw15-value-in-passthru-error-log.patch
 	patches.suse/nvme-pci-refresh-visible-attrs-after-being-checked.patch
