btrfs: fix ssd_spread overallocation (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -33213,6 +33213,7 @@
 	patches.suse/i2c-tegra-Fix-reset-error-handling-with-ACPI.patch
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
+	patches.suse/btrfs-fix-ssd_spread-overallocation.patch
 	patches.suse/btrfs-don-t-ignore-inode-missing-when-replaying-log-.patch
 	patches.suse/btrfs-don-t-skip-remaining-extrefs-if-dir-not-found-.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_attr_remove_iter_return.patch
