--- a/series.conf
+++ b/series.conf
@@ -18465,6 +18465,7 @@
 	patches.suse/mm-memory_hotplug-add-missing-mem_hotplug_lock.patch
 	patches.suse/mm-memory_hotplug-fix-error-handling-in-add_memory_r.patch
 	patches.suse/checkstack-fix-printed-address.patch
+	patches.suse/lib-group_cpus.c-avoid-acquiring-cpu-hotplug-lock-in.patch
 	patches.suse/drivers-base-cpu-crash-data-showing-should-depends-o.patch
 	patches.suse/units-add-missing-header.patch
 	patches.suse/nilfs2-fix-missing-error-check-for-sb_set_blocksize-.patch
