--- a/series.conf
+++ b/series.conf
@@ -33021,6 +33021,7 @@
 	patches.suse/s390-pkey-Prevent-overflow-in-size-calculation-for-memdup_.patch
 	patches.suse/drm-i915-fix-build-error-some-more.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
+	patches.suse/lib-group_cpus-fix-NULL-pointer-dereference-from-gro.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/x86-traps-Initialize-DR6-by-writing-its-architectural-rese.patch
