--- a/series.conf
+++ b/series.conf
@@ -31625,6 +31625,7 @@
 	patches.suse/btrfs-harden-block_group-bg_list-against-list_del-ra.patch
 	patches.suse/btrfs-make-btrfs_discard_workfn-block_group-ref-expl.patch
 	patches.suse/btrfs-explicitly-ref-count-block_group-on-new_bgs-li.patch
+	patches.suse/btrfs-tests-fix-chunk-map-leak-after-failure-to-add-.patch
 	patches.suse/btrfs-simplify-condition-for-logging-new-dentries-at.patch
 	patches.suse/btrfs-remove-end_no_trans-label-from-btrfs_log_inode.patch
 	patches.suse/dlm-prevent-NPD-when-writing-a-positive-value-to-event_done.patch
