Fix bogus i915 patch backport (bsc#1238972)
It's been already cherry-picked in 6.12 kernel itself.

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -482,3 +482,4 @@ e0525cd72b5979d8089fe524a071ea93fd011dc9 # libbpf is sourced from GitHub and not
 236d3910117e9f97ebf75e511d8bcc950f1a4e5f # libbpf is sourced from GitHub and not kernel-source
 0053f7d39d491b6138d7c526876d13885cbb65f1 # bpftool is sourced from GitHub and not kernel-source
 02a4694107b4c830d4bd6d194e98b3ac0bc86f29 # bpftool is sourced from GitHub and not kernel-source
+dc3806d9eb66d0105f8d55d462d4ef681d9eac59 # CVE-2024-58074 https://bugzilla.suse.com/show_bug.cgi?id=1238972#c19
