nvmet: pci-epf: Do not complete commands twice if nvmet_req_init() fails (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10356,6 +10356,7 @@
 	patches.suse/xfs-remove-unused-trace-event-xfs_reflink_cow_enospc.patch
 	patches.suse/nfsd-handle-get_client_locked-failure-in-nfsd4_setclientid_confirm.patch
 	patches.suse/NFSD-detect-mismatch-of-file-handle-and-delegation-stateid-in-OPEN-op.patch
+	patches.suse/nvmet-pci-epf-Do-not-complete-commands-twice-if-nvme.patch
 	patches.suse/PM-devfreq-Check-governor-before-using-governor-name.patch
 	patches.suse/PM-devfreq-Fix-a-index-typo-in-trans_stat.patch
 	patches.suse/PM-runtime-Take-active-children-into-account-in-pm_r.patch
