nvme: fix inconsistent RCU list manipulation in nvme_ns_add_to_ctrl_list() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10255,6 +10255,7 @@
 	patches.suse/drm-xe-mocs-Initialize-MOCS-index-early.patch
 	patches.suse/drm-xe-pf-Prepare-to-stop-SR-IOV-support-prior-GT-re.patch
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
+	patches.suse/nvme-fix-inconsistent-RCU-list-manipulation-in-nvme_.patch
 	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
 	patches.suse/KVM-x86-Reject-KVM_SET_TSC_KHZ-vCPU-ioctl-for-TSC-pr.patch
