nvme: fix misaccounting of nvme-mpath inflight I/O (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10257,6 +10257,7 @@
 	patches.suse/s390-bpf-Fix-bpf_arch_text_poke-with-new_addr-NULL-again.patch
 	patches.suse/nvme-fix-inconsistent-RCU-list-manipulation-in-nvme_.patch
 	patches.suse/nvme-fix-endianness-of-command-word-prints-in-nvme_l.patch
+	patches.suse/nvme-fix-misaccounting-of-nvme-mpath-inflight-I-O.patch
 	patches.suse/KVM-TDX-Don-t-report-base-TDVMCALLs.patch
 	patches.suse/Documentation-KVM-Fix-unexpected-unindent-warning.patch
 	patches.suse/KVM-x86-Reject-KVM_SET_TSC_KHZ-vCPU-ioctl-for-TSC-pr.patch
