btrfs: return a btrfs_inode from read_one_inode() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -7290,6 +7290,7 @@
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-du.patch
 	patches.suse/btrfs-fix-non-empty-delayed-iputs-list-on-unmount-d.patch
 	patches.suse/btrfs-return-a-btrfs_inode-from-btrfs_iget_logging.patch
+	patches.suse/btrfs-return-a-btrfs_inode-from-read_one_inode.patch
 	patches.suse/btrfs-fix-block-group-refcount-race-in-btrfs_create_.patch
 	patches.suse/btrfs-harden-block_group-bg_list-against-list_del-ra.patch
 	patches.suse/btrfs-make-btrfs_discard_workfn-block_group-ref-expl.patch
