KVM: x86: Drop pending_smi vs. INIT_RECEIVED check when setting MP_STATE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10479,6 +10479,7 @@
 	patches.suse/KVM-x86-Avoid-calling-kvm_is_mmio_pfn-when-kvm_x86_o.patch
 	patches.suse/KVM-TDX-Use-kvm_arch_vcpu.host_debugctl-to-restore-t.patch
 	patches.suse/KVM-SVM-Disable-interception-of-SPEC_CTRL-iff-the-MS.patch
+	patches.suse/KVM-x86-Drop-pending_smi-vs.-INIT_RECEIVED-check-whe.patch
 	patches.suse/drm-rockchip-cleanup-fb-when-drm_gem_fb_afbc_init-fa.patch
 	patches.suse/drm-connector-hdmi-Evaluate-limited-range-after-comp.patch
 	patches.suse/drm-panfrost-Fix-panfrost-device-variable-name-in-de.patch
