btrfs: don't silently ignore unexpected extent type when replaying log (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -9990,6 +9990,7 @@
 	patches.suse/btrfs-fix-a-race-between-renames-and-directory-loggi.patch
 	patches.suse/btrfs-update-superblock-s-device-bytes_used-when-dro.patch
 	patches.suse/btrfs-fix-invalid-inode-pointer-dereferences-during-.patch
+	patches.suse/btrfs-don-t-silently-ignore-unexpected-extent-type-w.patch
 	patches.suse/btrfs-fix-assertion-when-building-free-space-tree.patch
 	patches.suse/dm-raid-fix-variable-in-journal-device-check.patch
 	patches.suse/scsi-megaraid_sas-Fix-invalid-node-index.patch
