lib/group_cpus: fix NULL pointer dereference from group_cpus_evenly() (bsc#1236897).
- Refresh
  patches.suse/lib-group_cpus-let-group_cpu_evenly-return-number-initialized-masks.patch.

--- a/series.conf
+++ b/series.conf
@@ -10031,6 +10031,7 @@
 	patches.suse/drm-xe-guc-Explicitly-exit-CT-safe-mode-on-unwind.patch
 	patches.suse/drm-xe-Process-deferred-GGTT-node-removals-on-device.patch
 	patches.suse/drm-bridge-ti-sn65dsi86-Add-HPD-for-DisplayPort-conn.patch
+	patches.suse/lib-group_cpus-fix-NULL-pointer-dereference-from-gro.patch
 	patches.suse/i2c-robotfuzz-osif-disable-zero-length-read-messages.patch
 	patches.suse/i2c-tiny-usb-disable-zero-length-read-messages.patch
 	patches.suse/i2c-omap-Fix-an-error-handling-path-in-omap_i2c_prob.patch
