btrfs: don't skip remaining extrefs if dir not found during log replay (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -10342,6 +10342,7 @@
 	patches.suse/i2c-virtio-Avoid-hang-by-using-interruptible-complet.patch
 	patches.suse/i2c-qup-jump-out-of-the-loop-in-case-of-timeout.patch
 	patches.suse/btrfs-don-t-ignore-inode-missing-when-replaying-log-.patch
+	patches.suse/btrfs-don-t-skip-remaining-extrefs-if-dir-not-found-.patch
 	patches.suse/xfs-remove-unused-trace-event-xfs_attr_remove_iter_return.patch
 	patches.suse/xfs-remove-unused-event-xlog_iclog_want_sync.patch
 	patches.suse/xfs-remove-unused-event-xfs_ioctl_clone.patch
